# TFG_RTG

./: .gitignore  LICENSE  README.md  asofs-podman.sh  pyproject.toml  requirements.txt
container/: Containerfile  entrypoint.sh
examples/: basic.yaml  completo.yaml  dispositivos.yaml  generacion.yaml  hardlinks.yaml  nombres.yaml  tamanos.yaml  usuarios.yaml
src/testfs/: __init__.py  cli.py  config.py  generator.py  model.py
src/testfs/fuse/: filesystem.py
tests/: run_tests.sh
tests/bats/: test_dispositivos.bats  test_distribuciones.bats  test_generacion.bats  test_hardlinks.bats  test_mount.bats  test_nombres.bats  test_permisos.bats  test_tamanos.bats  test_timestamps.bats  test_tipos.bats  test_usuarios.bats
